RESOLVED FIXED 106591
Flexboxes incorrectly add the scrollbar width to the intrinsic width of fixed-width items
https://bugs.webkit.org/show_bug.cgi?id=106591
Summary Flexboxes incorrectly add the scrollbar width to the intrinsic width of fixed...
Ojan Vafai
Reported 2013-01-10 11:59:32 PST
Flexboxes incorrectly add the scrollbar width to the intrinsic width of fixed-width items
Attachments
Patch (11.75 KB, patch)
2013-01-10 12:01 PST, Ojan Vafai
leviw: review+
Ojan Vafai
Comment 1 2013-01-10 12:01:18 PST
Levi Weintraub
Comment 2 2013-01-10 12:14:55 PST
Comment on attachment 182187 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=182187&action=review > Source/WebCore/ChangeLog:27 > + * rendering/RenderGrid.cpp: > + (WebCore::RenderGrid::computePreferredLogicalWidths): Nit: a short summary would be nice for the changes, especially calling out that you're only adding a FIXME to RenderGrid.
Ojan Vafai
Comment 3 2013-01-10 12:33:45 PST
Note You need to log in before you can comment on or make changes to this bug.